[package]
name = "db2d"
version = "0.1.0"
edition = "2018"


[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = {version = "^0.11.0", features = ["simd-stable","render"]}
bevy-inspector-egui = "0.6.1"
# [dependencies.bevy_input_actionmap]
# git = "https://github.com/lightsoutgames/bevy_input_actionmap"
# rev = "1d8a96c"